# dnd

./: CMakeLists.txt  Monster List.csv
Backend/: ConsoleApplication1.cpp  Encounter.cpp  Encounter.h  Party.cpp
EncounterGenerator/: CMakeLists.txt  EncounterGenerator.natvis
EncounterGenerator/include/: Encounter.h  EncounterGenerator.h  FileHelper.h  FilledEncounter.h  GeneratorUtilities.h  JsonMonsterParser.h  Monster.h  MonsterList.h  Party.h
EncounterGenerator/src/: Battle.cpp  Battle.h  CMakeLists.txt  Encounter.cpp  Encounter.h  EncounterGenerator.cpp  FileHelper.cpp  FilledEncounter.cpp  GeneratorUtilities.cpp  GeneratorUtilities.h  JsonMonsterParser.cpp  Monster.cpp  Monster.h  MonsterList.cpp  Party.cpp  Party.h  Tables.h
Gui/: CMakeLists.txt
Gui/src/: main.cpp
Resources/: D&D Monster List - Monster_List.csv  D&D Monster List.csv  Monster_List_Json.json  RandomEncounters3Adventurers1Monsters.csv  RandomEncounters3Adventurers2Monsters.csv  RandomEncounters4Adventurers1Monsters.csv  RandomEncounters4Adventurers2Monsters.csv  RandomEncounters5Adventurers1Monsters.csv  RandomEncounters5Adventurers2Monsters.csv  RandomEncounters6Adventurers1Monsters.csv  RandomEncounters6Adventurers2Monsters.csv  RandomEncountersFiveAdventurersOneMonsters.csv  RandomEncountersFiveAdventurersTwoMonsters.csv  RandomEncountersFourAdventurersOneMonsters.csv  RandomEncountersFourAdventurersTwoMonsters.csv  RandomEncountersSixAdventurersOneMonsters.csv  RandomEncountersSixAdventurersTwoMonsters.csv  RandomEncountersThreeAdventurersOneMonsters.csv  RandomEncountersThreeAdventurersTwoMonsters.csv
Resources/git_hooks/: commit-msg
